defconfigs: F2FS Support
Change-Id: I0f92f5e28536d97015bd5bcc9fea2b199d50d690

--- a/arch/arm64/configs/cyanogenmod_angler_defconfig
+++ b/arch/arm64/configs/cyanogenmod_angler_defconfig
@@ -3743,3 +3743,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_STRICT_MEMORY_RWX=y
+
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
